--- a/android/app/AndroidManifest.xml
+++ b/android/app/AndroidManifest.xml
@@ -4,14 +4,16 @@
     android:versionCode="1"
     android:versionName="1.0"
     >
+    <uses-sdk android:minSdkVersion="7" android:targetSdkVersion="16"/>
     <application
         android:label="@string/app_name"
         android:icon="@drawable/icon"
         android:name=".HeartOMaticApplication"
+        android:theme="@style/Theme.HoloEverywhereDark.Sherlock"
         >
         <!-- activities -->
         <activity
-            android:name=".activity.Main"
+            android:name=".activity.MainActivity"
             android:label="@string/app_name"
             >
             <intent-filter>
@@ -22,6 +24,14 @@
         <activity android:name=".activity.PrefsActivity"
             android:label="@string/app_name"
             >
+        </activity>
+        <activity android:name=".activity.PrefsPersonalActivity"
+            android:label="@string/app_name"
+            >
+            <intent-filter>
+                <action android:name="android.intent.action.VIEW"/>
+                <category android:name="android.intent.category.DEFAULT"/>
+            </intent-filter>
         </activity>
     </application>
 
