--- a/android/app/AndroidManifest.xml
+++ b/android/app/AndroidManifest.xml
@@ -21,6 +21,10 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".activity.WorkoutActivity"
+            android:label="@string/app_name"
+            >
+        </activity>
         <activity android:name=".activity.PrefsActivity"
             android:label="@string/app_name"
             >
